--- a/Quiz.html
+++ b/Quiz.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>LPL Mastery - Java Quiz</title>
@@ -8,9 +9,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-image: url('background_image.jpg'); /* Replace 'background_image.jpg' with your actual image path */
-            background-size: cover;
-            background-position: center;
+            background-color: lightblue; /* Set background color to light blue */
             font-family: Arial, sans-serif;
             color: #fff; /* Text color */
         }
@@ -134,5 +133,3 @@
     </script>
 </body>
 </html>
-  
-    
