--- a/Quiz.html
+++ b/Quiz.html
@@ -1,56 +1,19 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
     <title>LPL Mastery - Java Quiz</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
         /* Additional CSS styles specific to the quiz */
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            color: #fff; /* Text color */
-        }
-
         #quiz {
             display: none; /* Hide the quiz initially */
             margin-top: 20px;
-            animation: fadeIn 1s ease-in-out; /* Fade-in animation */
-            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
-            padding: 20px;
-            border-radius: 10px;
         }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
-
         .question {
             margin-bottom: 10px;
         }
-
         .options {
             margin-bottom: 20px;
-        }
-
-        button {
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        button:hover {
-            background-color: #0056b3;
         }
     </style>
 </head>
@@ -65,8 +28,8 @@
         </div>
         
         <!-- Java Quiz Section -->
-        <h1 style="text-align: center;">Java Quiz</h1>
-        <button onclick="startQuiz()" style="display: block; margin: 0 auto;">Let's Start the Quiz</button>
+        <h1>Java Quiz</h1>
+        <button onclick="startQuiz()">Let's Start the Quiz</button>
         <div id="quiz">
             <!-- Quiz content will be inserted here -->
         </div>
