--- a/Quiz.html
+++ b/Quiz.html
@@ -76,7 +76,7 @@
         // Function to start the quiz
         function startQuiz() {
             displayQuiz(); // Display the quiz
-            document.getElementById("quiz").style.display = "block"; // Show the quiz
+            document.getElementById("quiz").style.display = "lightblue"; // Show the quiz
         }
 
         // Function to grade the quiz
