--- a/About.html
+++ b/About.html
@@ -22,7 +22,7 @@
                 <ul>
                   <li><a href="Tutorial.html">Tutorial</a></li>
                   <li><a href="Compiler.html">Compiler</a></li>
-                  <li><a href="Quiz.html">Quiz</a></li>
+                  <li><a href="Quiz.html">Quiz time</a></li>
                 </ul>
               </div>
             <h2>About Us</h2><br>
