--- a/Contact.html
+++ b/Contact.html
@@ -22,7 +22,7 @@
             <div class="top">
                 <ul>
                   <li><a href="Tutorial.html">Tutorial</a></li>
-                  <li><a href="CompilerTest.java">Compiler</a></li>
+                  <li><a href="Compiler.html">Compiler</a></li>
                   <li><a href="Quiz.html">Quiz</a></li>
                 </ul>
               </div>
