--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
     <head>
         <title>LPL Mastery</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body class="home">
+    <body class="home light-mode">
         <header>
             <nav>
                 <ul>
@@ -27,7 +29,7 @@
                 </ul>
               </div>
             <h2>Welcome to LPL Mastery</h2>
-            <p>Learn Java from beginner to advanced level with our comprehensive tutorials, examples, and Resources</p>
+            <p>Learn Java from beginner to advanced level with our comprehensive tutorials, examples, and Resources</p)>
             <br><br><br><br>
             <h2>Key Features</h2>
             <nav>
