--- a/Quiz.html
+++ b/Quiz.html
@@ -69,9 +69,9 @@
         // Define your quiz questions and answers
         var questions = [
             {
-                question: "What is the capital of Java?",
-                options: ["Jakarta", "Bali", "Surabaya", "Bandung"],
-                answer: "Jakarta"
+                question: "Which is the correct code?",
+                options: ["System.Out.println("Hello World");", "System.out.println("Hello World"):", "System.out.println("Hello World");", "system.Out.println("Hello World");"],
+                answer: ""System.out.println("Hello World");"
             },
             {
                 question: "Which keyword is used to define a constant in Java?",
