--- a/Quiz.html
+++ b/Quiz.html
@@ -71,7 +71,7 @@
             {
                 question: "Which is the correct code?",
                 options: ["System.Out.println("Hello World");", "System.out.println("Hello World"):", "System.out.println("Hello World");", "system.Out.println("Hello World");"],
-                answer: ""System.out.println("Hello World");"
+                answer:"System.out.println("Hello World");"
             },
             {
                 question: "Which keyword is used to define a constant in Java?",
