--- a/Quiz.html
+++ b/Quiz.html
@@ -69,9 +69,9 @@
         // Define your quiz questions and answers
         var questions = [
             {
-                question: "Which is the correct code?",
-                options: ["System.Out.println("Hello World");", "System.out.println("Hello World"):", "System.out.println("Hello World");", "system.Out.println("Hello World");"],
-                answer:"System.out.println("Hello World");"
+                question: "when did java Language invented?",
+                options: ["1991", "1999", "1995", "2005"],
+                answer:"1991"
             },
             {
                 question: "Which keyword is used to define a constant in Java?",
