--- a/Quiz.html
+++ b/Quiz.html
@@ -74,7 +74,7 @@
                 answer:"1991"
             },
             {
-                question: "Which keyword is used to define a constant in Java?",
+                question: "",
                 options: ["let", "final", "const", "static"],
                 answer: "final"
             },
