--- a/Quiz.html
+++ b/Quiz.html
@@ -1,183 +1,158 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>LPL Mastery - Quiz</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <style>
-        /* Additional CSS styles specific to the quiz */
-        #quiz, #additionalQuiz {
-            display: none; /* Hide the quizzes initially */
-            margin-top: 20px;
-            animation: fadeIn 1s ease-in-out; /* Fade-in animation */
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Java Quiz</title>
+<style>
+/* CSS styles */
+.quiz-container {
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: center;
+}
 
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
+.question-container {
+  display: none;
+}
 
-        .question {
-            margin-bottom: 10px;
-        }
+.result-container {
+  display: none;
+}
 
-        .options {
-            margin-bottom: 20px;
-        }
+.options {
+  list-style: none;
+  padding: 0;
+}
 
-        button {
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
+.options li {
+  margin-bottom: 10px;
+}
 
-        button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+.next-btn {
+  padding: 10px 20px;
+  margin-top: 20px;
+  cursor: pointer;
+}
+</style>
 </head>
 <body>
-    <header>
-        <!-- Your header content -->
-    </header>
-    <main>
-        <!-- Your main content -->
-        <div class="top">
-            <!-- Your top navigation links -->
-        </div>
-        
-        <!-- Java Quiz Section -->
-        <h1>Java Quiz</h1>
-        <button onclick="startJavaQuiz()">Let's Start the Java Quiz</button>
-        <div id="javaQuiz">
-            <!-- Java Quiz content will be inserted here -->
-        </div>
+<div class="quiz-container">
+  <div id="question-container" class="question-container">
+    <h2 id="question"></h2>
+    <ul id="options" class="options"></ul>
+  </div>
+  <div id="result-container" class="result-container">
+    <p id="result"></p>
+    <button id="next-btn" class="next-btn">Next Question</button>
+  </div>
+</div>
+<script>
+// JavaScript code
+const quizData = [
+  {
+    question: "When was the Java language invented?",
+    options: ["1991", "1999", "1995", "2005"],
+    answer: "1991"
+  },
+  {
+    question: "Who Created Java Language?",
+    options: ["Dmitri Mendeleev", "Henry Wyn-Jeffry", "James Gosling", "Leonardo Di Caprio"],
+    answer: "James Gosling"
+  },
+  {
+    question: "Java Programs are?",
+    options: ["Faster than others ", "Platforms Independent ", "Not scalable  ", "Not Reusable "],
+    answer: "Platforms Independent "
+  },
+  {
+    question: "Which statement is true about Java?",
+    options: ["Java is a sequence-dependent programming language ", "Java is a code dependent programming language ", "Java is a platform-dependent programming language ", "Java is a platform-independent programming language  "],
+    answer: "Java is a platform-independent programming language  "
+  },
+  {
+    question: "Which component is used to compile, debug and execute the java programs?",
+    options: ["JRE", "JIT", "JDK", "JVM"],
+    answer: "JDK "
+  },
+  {
+    question: "Which one of the following is not a Java feature?",
+    options: ["Object-oriented ", "Use of pointers", "Portable ", "Dynamic and Extensible"],
+    answer: "Use of pointers "
+  },
+  {
+    question: "Which of the following is not an OOPS concept in Java?",
+    options: ["Polymorphism ", "Inheritance ", "Compilation ", "Encapsulation "],
+    answer: "Compilation "
+  },
+  {
+    question: "What is the extension of compiled java classes?",
+    options: [".txt", ".js ", ".class", ".java"],
+    answer: ".class"
+  },
+  {
+    question: "Which of these keywords is used to define interfaces in Java?",
+    options: ["Int ", "Intf", "interface ", "Innerface"],
+    answer: "interface "
+  },
+  {
+    question: "Which of these are selection statements in Java?",
+    options: ["break", "continue", "for()", "if()"],
+    answer: "if()"
+  }
+];
 
-        <!-- Additional Quiz Section -->
-        <h1>Additional Quiz</h1>
-        <button onclick="startAdditionalQuiz()">Let's Start the Additional Quiz</button>
-        <div id="additionalQuiz">
-            <!-- Additional Quiz content will be inserted here -->
-        </div>
-    </main>
-    <footer>
-        <!-- Your footer content -->
-    </footer>
+const questionContainer = document.getElementById('question-container');
+const resultContainer = document.getElementById('result-container');
+const questionElement = document.getElementById('question');
+const optionsElement = document.getElementById('options');
+const resultElement = document.getElementById('result');
+const nextButton = document.getElementById('next-btn');
 
-    <!-- JavaScript for the Quizzes -->
-    <script>
-        // Define your Java quiz questions and answers
-        var javaQuestions = [
-            {
-                question: "When was the Java language invented?",
-                options: ["1991", "1999", "1995", "2005"],
-                answer: "1991"
-            },
-            {
-                question: "Who Created Java Language?",
-                options: ["Dmitri Mendeleev", "Henry Wyn-Jeffry", "James Gosling", "Leonardo Di Caprio"],
-                answer: "James Gosling"
-            },
-            // Add more Java questions as needed
-        ];
+let currentQuestionIndex = 0;
+let score = 0;
 
-        // Define your additional quiz questions and answers
-        var additionalQuestions = [
-            {
-                question: "Java Programs are?",
-                options: ["Faster than others", "Platforms Independent", "Not scalable", "Not Reusable"],
-                answer: "Platforms Independent"
-            },
-            {
-                question: "Which statement is true about Java?",
-                options: ["Java is a sequence-dependent programming language", "Java is a code dependent programming language", "Java is a platform-dependent programming language", "Java is a platform-independent programming language"],
-                answer: "Java is a platform-independent programming language"
-            },
-            // Add more additional questions as needed
-        ];
+// Function to load question
+function loadQuestion() {
+  const currentQuestion = quizData[currentQuestionIndex];
+  questionElement.innerText = currentQuestion.question;
+  optionsElement.innerHTML = '';
+  currentQuestion.options.forEach(option => {
+    const li = document.createElement('li');
+    li.innerText = option;
+    li.addEventListener('click', () => {
+      if (option === currentQuestion.answer) {
+        score++;
+      }
+      nextQuestion();
+    });
+    optionsElement.appendChild(li);
+  });
+}
 
-        // Function to display the Java quiz
-        function displayJavaQuiz() {
-            var javaQuizContainer = document.getElementById("javaQuiz");
-            var javaQuizHtml = "";
-            javaQuestions.forEach(function(questionObj, index) {
-                javaQuizHtml += "<div class='question'>";
-                javaQuizHtml += "<p>" + (index + 1) + ". " + questionObj.question + "</p>";
-                javaQuizHtml += "<div class='options'>";
-                questionObj.options.forEach(function(option) {
-                    javaQuizHtml += "<input type='radio' name='javaQuestion" + index + "' value='" + option + "'>";
-                    javaQuizHtml += "<label>" + option + "</label><br>";
-                });
-                javaQuizHtml += "</div></div>";
-            });
-            javaQuizHtml += "<button onclick='submitJavaQuiz()'>Submit Java Quiz</button>";
-            javaQuizContainer.innerHTML = javaQuizHtml;
-        }
+// Function to show result
+function showResult() {
+  questionContainer.style.display = 'none';
+  resultContainer.style.display = 'block';
+  resultElement.innerText = `Your Score: ${score} out of ${quizData.length}`;
+}
 
-        // Function to start the Java quiz
-        function startJavaQuiz() {
-            displayJavaQuiz(); // Display the Java quiz
-            document.getElementById("javaQuiz").style.display = "block"; // Show the Java quiz
-        }
+// Function to load next question or show result
+function nextQuestion() {
+  currentQuestionIndex++;
+  if (currentQuestionIndex < quizData.length) {
+    loadQuestion();
+  } else {
+    showResult();
+  }
+}
 
-        // Function to grade the Java quiz
-        function submitJavaQuiz() {
-            var score = 0;
-            javaQuestions.forEach(function(questionObj, index) {
-                var selectedOption = document.querySelector("input[name='javaQuestion" + index + "']:checked");
-                if (selectedOption) {
-                    if (selectedOption.value === questionObj.answer) {
-                        score++;
-                    }
-                }
-            });
-            alert("Your score for the Java quiz: " + score + "/" + javaQuestions.length);
-        }
+// Event listener for next button
+nextButton.addEventListener('click', nextQuestion);
 
-        // Function to display the additional quiz
-        function displayAdditionalQuiz() {
-            var additionalQuizContainer = document.getElementById("additionalQuiz");
-            var additionalQuizHtml = "";
-            additionalQuestions.forEach(function(questionObj, index) {
-                additionalQuizHtml += "<div class='question'>";
-                additionalQuizHtml += "<p>" + (index + 1) + ". " + questionObj.question + "</p>";
-                additionalQuizHtml += "<div class='options'>";
-                questionObj.options.forEach(function(option) {
-                    additionalQuizHtml += "<input type='radio' name='additionalQuestion" + index + "' value='" + option + "'>";
-                    additionalQuizHtml += "<label>" + option + "</label><br>";
-                });
-                additionalQuizHtml += "</div></div>";
-            });
-            additionalQuizHtml += "<button onclick='submitAdditionalQuiz()'>Submit Additional Quiz</button>";
-            additionalQuizContainer.innerHTML = additionalQuizHtml;
-        }
-
-        // Function to start the additional quiz
-        function startAdditionalQuiz() {
-            displayAdditionalQuiz(); // Display the additional quiz
-            document.getElementById("additionalQuiz").style.display = "block"; // Show the additional quiz
-        }
-
-        // Function to grade the additional quiz
-        function submitAdditionalQuiz() {
-            var score = 0;
-            additionalQuestions.forEach(function(questionObj, index) {
-                var selectedOption = document.querySelector("input[name='additionalQuestion" + index + "']:checked");
-                if (selectedOption) {
-                    if (selectedOption.value === questionObj.answer) {
-                        score++;
-                    }
-                }
-            });
-            alert("Your score for the additional quiz: " + score + "/" + additionalQuestions.length);
-        }
-    </script>
+// Initial loading of first question
+loadQuestion();
+</script>
 </body>
 </html>
+
